<resources>
    <string name="app_name">SmartHotelModel</string>
    <string name="menu_title">Menu</string>
    <string name="menu_picutre">Picture</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_channel">Channel</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_control">Parental Control</string>
    <string name="option_menu_title">Option Menu</string>
    <string name="str_menu_option">OPTION</string>
    <string name="menu_option_hdr">HDR</string>
    <string name="str_hdr_hdrmode">HDR</string>
    <string-array name="str_arr_option_caption">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="str_arr_option_closed_caption">
        <item>Off</item>
        <item>On</item>
        <item>On When Muted</item>
        <item>CC1</item>
        <item>CC2</item>
        <item>CC3</item>
        <item>CC4</item>
        <item>TEXT1</item>
        <item>TEXT2</item>
        <item>TEXT3</item>
        <item>TEXT4</item>
    </string-array>
    <string name="str_cha_software_update_usb">Software Update (USB)</string>
    <string-array name="setting_lock_system_vals">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string name="str_pc_image_mode_title">PC Image Mode</string>
    <string name="str_dtv_manual_channel_flag">CH</string>
    <string name="str_autotuning_title">Choose  Country</string>
    <string name="str_dialog_tip">Tip</string>
    <string name="softupdate_info">Please insert the USB storage device which has the correct firmware file in it, and select “YES” for upgrade.</string>
    <string name="str_reboot_wait">Rebooting! Please Wait...</string>
    <string name="str_update_wait">Please Waiting!</string>
    <string name="str_update_start">Start</string>
    <string-array name="str_arr_update_status">
        <item>Fail!</item>
        <item>Success!</item>
        <item>Upgrade file not found!</item>
        <item>Please insert a USB memory device!</item>
    </string-array>
    <string name="str_signalhear">To save energy,after 5s the TV will switch off the screen.To watch tv again,press a key on the remote control.</string>
    <string name="str_factory_agemode_open">Age mode open</string>
    <string name="str_factory_agemode_close">Age mode close</string>
    <string name="str_factory_channelpreset_suc">Channel preset success</string>
    <string name="pppoe_connect_success">PPPOE dial-up success.</string>
    <string name="str_factory_wire_connect">Wire Connect</string>
    <string name="str_factory_ipaddress">IP Address</string>
    <string name="str_factory_ipaddress_error">IP Address set error</string>
    <string name="ip_address">IP address</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="default_geteway">Default geteway</string>
    <string name="forget">forget</string>
    <string name="first_dns">First dns</string>
    <string name="second_dns">Second dns</string>
    <string name="connect_state">Connected to</string>
    <string name="is_scanning">is scanning...</string>
    <string name="eth_enable">Cable network card can not use</string>
    <string name="eth_able">Cable network card can use</string>
    <string name="str_factory_wireMac">MAC address of the wired network</string>
    <string name="str_factory_wireMac_close">Close</string>
    <string name="str_factory_writeMacAddress">Write MAC Address</string>
    <string name="str_factory_writeMacSuc">Write MAC address success!Pls reboot the TV</string>
    <string name="str_factory_noMacfile">no excited mac.bin file</string>
    <string name="str_factory_readFileError">read mac.bin file error</string>
    <string name="str_factory_dataOverRetangle">Data exceeds the address range, check mac.bin file</string>
    <string name="str_factory_write_mac_waiting">MAC addresses are burning, please wait!</string>
    <string name="str_factory_reset_error">Sorry,factory reset error!</string>
    <string name="str_reset_info">Please wait...</string>
    <string name="str_being_reset">Being reset...</string>
    <string name="str_hotel_menu">HOTEL MENU</string>
    <string name="str_ch_lock">CH LOCK</string>
    <string name="str_max_vol">MAX VOL</string>
    <string name="str_auto_set">AUTO SET</string>
    <string name="str_picture_mode">PICTURE MODE</string>
    <string name="str_power_vol">POWER VOL</string>
    <string name="str_power_source">POWER SOURCE</string>
    <string name="str_power_ch_number">CH NUMBER</string>
    <string name="str_lock_ch_num">LOCK CH NUM</string>
    <string name="str_lock_ch">LOCK</string>
    <string name="str_key_lock">KEY LOCK</string>
    <string name="str_logo_set">Logo Set</string>
    <string name="str_logo_set_value">Change Logo</string>
    <string name="str_clone">Clone</string>
    <string name="str_backup">Backup</string>
    <string name="str_restore">Restore</string>
    <string name="str_logo_restore">Logo Restore</string>
    <string name="str_logo_cancel">Cancel</string>
    <string name="str_logo_reset_info">LOGO RESET?</string>
    <string name="str_logo_reset_result_info">Logo reset success!!!</string>
    <string name="str_logo_reset_mistake_info_limit">File is large!!</string>
    <string name="str_logo_reset_mistake_info_no_file">No logo file exit!!!</string>
    <string-array name="str_arr_hotelmennu_onoff">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="str_arr_chlock_onoff">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="str_arr_keylock_onoff">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="backup_successed">Backup successed</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_successed">Restore successed</string>
    <string name="restore_failed">Restore failed</string>
    <string name="str_logo_restore_success">Logo Restore success</string>
    <string name="str_menu_reset_dialog_message">Are you sure?</string>
    <string name="str_menu_reset_dialog_confirm">Yes</string>
    <string name="str_menu_reset_dialog_cancel">No</string>
    <string-array name="hotelmenu_arr_dtmb_input_source_vals">
        <item>ATV</item>
        <item>DTV</item>
        <item>AV</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
    </string-array>
    <string name="str_auto_adjust">Auto Adjusting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>Standard</item>
        <item>Bright</item>
        <item>Soft</item>
        <item>User</item>
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_autobacklight">Auto BackLight</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>Cold</item>
        <item>Standard</item>
        <item>Warm</item>
    </string-array>
    <string name="str_pic_colortemperature_red">Red</string>
    <string name="str_pic_colortemperature_green">Green</string>
    <string name="str_pic_colortemperature_blue">Blue</string>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Auto</item>
        <item>16:9</item>
        <item>4:3</item>
        <item>Film</item>
        <item>Subtitle</item>
        <item>PC Mode</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string name="str_pic_openhdr">Open HDR</string>
    <string-array name="str_arr_openhdr_vals">
        <item>Off</item>
        <item>Auto</item>
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
        <item>Ref. Mode</item>
    </string-array>
    <string name="str_hdr_tip">Valid only when HDMI EDID version is 2.0</string>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minute</item>
        <item>20 Minute</item>
        <item>30 Minute</item>
        <item>60 Minute</item>
        <item>90 Minute</item>
        <item>120 Minute</item>
        <item>180 Minute</item>
        <item>240 Minute</item>
    </string-array>
    <string name="str_setting_sleep_mode_remin_min">Min</string>
    <string-array name="str_arr_pvr_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Adjust</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound Mode</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>User</item>
    </string-array>
    <string name="str_sound_bass">Low Pitch</string>
    <string name="str_sound_treble">High Pitch</string>
    <string name="str_sound_equalizer">Equilizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">AVC</string>
    <string name="str_sound_vd">Video Description</string>
    <string name="str_sound_ad">AD Switch</string>
    <string name="str_sound_ad_volume">AD Volume</string>
    <string name="str_sound_ad_mixerbalance">AD Mixer Balance</string>
    <string-array name="str_arr_sound_ad_mixerbalance_vals">
        <item>Main Max</item>
        <item>Main 75%</item>
        <item>Equal</item>
        <item>AD 75%</item>
        <item>AD Max</item>
    </string-array>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_truehdbypass">Dolby TrueHD/DTS-HD</string>
    <string name="str_sound_srs">SRS</string>
    <string-array name="str_arr_sound_vd_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string name="str_sound_spdifoutput">SPDIF Output</string>
</resources>